--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,7 @@
 {
   "extends": "./tsconfig.json",
+  "paths": {
+    "@app/*": ["./src/*"]
+  },
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
